# systema

./: Cargo.toml  deny.toml  flake.nix  rust-toolchain.toml
src/: actor.rs  holder.rs  lib.rs  serde_support.rs  system.rs  util_traits.rs
src/attribute/: instance.rs  map.rs  mod.rs  modifier.rs  supplier.rs
tests/: test.rs
