[package]
name = "sos"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
once_cell = "1.19"

itertools = "0.14"